Real Estate Button width issue on mobile

--- a/themes/bc/static/css/style.css
+++ b/themes/bc/static/css/style.css
@@ -790,11 +790,7 @@ th {
 @media ( max-width: 1199px ) {
     .realestate .button a {
         font-size: 25px;
-    }
-}
-@media ( max-width: 950px ) {
-    .realestate .button a {
-        width: 50%;
+        width: 49%;
     }
 }
 
